--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.15",
     "pinia": "^2.1.6",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
