--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "autoprefixer": "^10.4.15",
     "pinia": "^2.1.6",
     "tailwindcss": "^3.3.3",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
