--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.15",
+    "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
