--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
     "tailwindcss": "^3.3.3",
+    "vite-plugin-require": "^1.1.10",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
