--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.15",
     "firebase": "^10.3.0",
     "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
-    "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
-    "vite": "^4.4.9"
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.9",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
