--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "firebase": "^10.3.0",
     "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
-    "vite-plugin-require": "^1.1.10",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
